# bxsbot

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE1_SUMMARY.md  PHASE2_IMPLEMENTATION.md  README.md  package-lock.json  test_phase2.sh
.claude/: settings.local.json
config/: keywords.toml
src/: main.rs
src/config/: keywords.rs  mod.rs
src/crawler/: arxiv.rs  mod.rs
src/generator/: mod.rs
src/parser/: formula_extractor.rs  image_analyzer.rs  mod.rs  pdf_parser.rs  table_parser.rs
src/storage/: cache.rs  database.rs  mod.rs  models.rs
src/translator/: mod.rs
src/utils/: logger.rs  mod.rs  scheduler.rs
